fix(css): fix icon display on mobile devices

--- a/assets/css/_partial/_single/_friend.scss
+++ b/assets/css/_partial/_single/_friend.scss
@@ -104,9 +104,6 @@ $friend-link-hover-color-black: #ffffff;
 }
 
 @media screen and (max-width: 600px) {
-    .fas {
-        display: none;
-    }
     .friend-bio {
         display: none;
     }
